--- a/Projects/Digital Cheese Sommelier/Recommender_model.ipynb
+++ b/Projects/Digital Cheese Sommelier/Recommender_model.ipynb
@@ -2132,6 +2132,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Run"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Part 5:  Creating masks based on the selections made in the dropdown"
    ]
   },
@@ -2671,6 +2678,13 @@
     "    # format the display_frame to include a readable list of important cheese data, and display it\n",
     "    display(format_display(display_frame, dif_factor))\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- [Run](#Run)"
    ]
   },
   {
