--- a/Projects/Digital Cheese Sommelier/Recommender_model.ipynb
+++ b/Projects/Digital Cheese Sommelier/Recommender_model.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
        "[5 rows x 38 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
        "[5 rows x 38 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -611,28 +611,28 @@
      "output_type": "stream",
      "text": [
       "List of values for Type : \n",
-      "['firm', 'semi firm', 'whey', 'hard', 'artisan', 'soft', 'processed', 'fresh soft', 'semi-hard', 'soft-ripened', 'semi-soft', 'blue-veined', 'fresh firm', 'brined', 'smear-ripened']\n",
+      "['semi-soft', 'whey', 'fresh soft', 'hard', 'smear-ripened', 'semi firm', 'blue-veined', 'firm', 'soft', 'brined', 'artisan', 'semi-hard', 'soft-ripened', 'fresh firm', 'processed']\n",
       "\n",
       "List of values for Texture : \n",
-      "['stringy', 'buttery', 'dry', 'sticky', 'oily', 'soft-ripened', 'chewy', 'crystalline', 'elastic', 'soft', 'runny', 'close', 'creamy', 'dense', 'spreadable', 'firm', 'compact', 'semi firm', 'smooth', 'flaky', 'fluffy', 'brittle', 'crumbly', 'open', 'springy', 'grainy', 'chalky', 'supple']\n",
+      "['creamy', 'compact', 'close', 'sticky', 'chalky', 'chewy', 'oily', 'grainy', 'smooth', 'crystalline', 'elastic', 'open', 'soft-ripened', 'stringy', 'springy', 'brittle', 'fluffy', 'runny', 'spreadable', 'buttery', 'supple', 'semi firm', 'crumbly', 'dry', 'firm', 'flaky', 'soft', 'dense']\n",
       "\n",
       "List of values for Flavour : \n",
-      "['mushroomy', 'buttery', 'caramel', 'sour', 'bitter', 'crunchy', 'citrusy', 'burnt caramel', 'floral', 'lemony', 'vegetal', 'rustic', 'mellow', 'herbaceous', 'sweet', 'grassy', 'tangy', 'acidic', 'savory', 'pungent', 'salty', 'woody', 'spicy', 'creamy', 'full-flavored', 'umami', 'earthy', 'tart', 'garlicky', 'subtle', 'smooth', 'butterscotch', 'licorice', 'sharp', 'smokey', 'milky', 'smokey ', 'meaty', 'fruity', 'strong', 'nutty', 'piquant', 'yeasty', 'pronounced', 'mineral', 'mild', 'oceanic']\n",
+      "['floral', 'creamy', 'tart', 'caramel', 'mineral', 'savory', 'woody', 'butterscotch', 'milky', 'sweet', 'yeasty', 'herbaceous', 'umami', 'mellow', 'nutty', 'licorice', 'smooth', 'garlicky', 'oceanic', 'smokey', 'rustic', 'earthy', 'crunchy', 'smokey ', 'meaty', 'vegetal', 'spicy', 'lemony', 'full-flavored', 'salty', 'burnt caramel', 'grassy', 'strong', 'buttery', 'sharp', 'mild', 'bitter', 'acidic', 'citrusy', 'piquant', 'pungent', 'pronounced', 'mushroomy', 'sour', 'subtle', 'fruity', 'tangy']\n",
       "\n",
       "List of values for Aroma : \n",
-      "['raw nut', 'goaty', 'toasty', 'buttery', 'caramel', 'rich', 'clean', 'floral', 'stinky', 'sweet', 'grassy', 'pungent', 'lactic', 'lanoline', 'woody', 'spicy', 'barnyardy', 'earthy', 'ripe', 'garlicky', 'subtle', 'mushroom', 'fresh', 'musty', 'aromatic', 'pleasant', 'smokey', 'milky', 'herbal', 'perfumed', 'fruity', 'strong', 'nutty', 'yeasty', 'pronounced', 'mild', 'fermented']\n",
+      "['floral', 'aromatic', 'caramel', 'herbal', 'mushroom', 'woody', 'milky', 'sweet', 'yeasty', 'lactic', 'ripe', 'nutty', 'stinky', 'perfumed', 'garlicky', 'clean', 'goaty', 'smokey', 'earthy', 'rich', 'spicy', 'raw nut', 'fresh', 'grassy', 'toasty', 'strong', 'musty', 'buttery', 'pleasant', 'mild', 'pungent', 'pronounced', 'barnyardy', 'fermented', 'lanoline', 'subtle', 'fruity']\n",
       "\n",
       "List of values for Rind : \n",
-      "['rindless', 'plastic', 'ash coated', 'waxed', 'bloomy', 'washed', 'cloth wrapped', 'leaf wrapped', 'mold ripened', 'natural', 'artificial']\n",
+      "['rindless', 'plastic', 'natural', 'waxed', 'ash coated', 'mold ripened', 'cloth wrapped', 'washed', 'artificial', 'bloomy', 'leaf wrapped']\n",
       "\n",
       "List of values for Vegetarian : \n",
       "['no', 'yes']\n",
       "\n",
       "List of values for Family : \n",
-      "['Tomme', 'Gruyere', 'Cornish', 'Monterey Jack', 'Camembert', 'Cheddar', 'Havarti', 'blue', 'Gouda', 'Brie', 'Mozzarella', 'Saint-Paulin', 'Raclette', 'Swiss Cheese', 'Cottage', 'Italian Cheese', 'Caciotta', 'Parmesan', 'Blue', 'Feta', 'Gorgonzola', 'Pasta filata', 'Pecorino']\n",
+      "['Mozzarella', 'Italian Cheese', 'Gruyere', 'Parmesan', 'Blue', 'Gorgonzola', 'blue', 'Pecorino', 'Pasta filata', 'Havarti', 'Saint-Paulin', 'Raclette', 'Feta', 'Camembert', 'Cheddar', 'Cottage', 'Cornish', 'Brie', 'Monterey Jack', 'Swiss Cheese', 'Caciotta', 'Gouda', 'Tomme']\n",
       "\n",
       "List of values for Country of origin : \n",
-      "['Bulgaria', 'Sweden', 'Australia', 'Denmark', 'Iceland', 'Azerbaijan', 'Georgia', 'Tibet', 'Scotland', 'Isle of Man', 'Egypt', 'Germany', 'France', 'Mauritania', 'Japan', 'Brazil', 'Belarus', 'Hungary', 'Middle East', 'Nepal', 'Netherlands', 'Wales', 'Israel', 'Macedonia', 'Cyprus', 'England', 'Mongolia', 'Russia', 'Caribbean', 'Serbia', 'Greece', 'Chile', 'United Kingdom', 'Czech Republic', 'New Zealand', 'Portugal', 'Armenia', 'Finland', 'Mexico', 'Holland', 'Romania', 'Ukraine', 'Great Britain', 'United States', 'Norway', 'Canada', 'India', 'Belgium', 'Poland', 'Switzerland', 'Croatia', 'Iran', 'Iraq', 'Jordan', 'Afghanistan', 'Palestine', 'Bangladesh', 'Lebanon', 'Argentina', 'China', 'Italy', 'Swaziland', 'Spain', 'Ireland', 'Syria', 'Eastern Mediterranean', 'Pakistan', 'Andorra', 'Slovakia', 'Austria', 'Albania', 'Turkey', 'Lithuania']\n",
+      "['Andorra', 'Croatia', 'Caribbean', 'Argentina', 'Afghanistan', 'Canada', 'Mongolia', 'Netherlands', 'New Zealand', 'Portugal', 'Middle East', 'Belgium', 'Romania', 'Mauritania', 'Switzerland', 'Ireland', 'Nepal', 'Albania', 'Egypt', 'Hungary', 'Bulgaria', 'Israel', 'Finland', 'Syria', 'Turkey', 'Greece', 'Russia', 'China', 'Isle of Man', 'Palestine', 'Japan', 'Slovakia', 'United States', 'Italy', 'Serbia', 'Australia', 'Ukraine', 'Lithuania', 'Norway', 'Scotland', 'Tibet', 'Georgia', 'Holland', 'Jordan', 'United Kingdom', 'Iceland', 'Cyprus', 'Poland', 'Iraq', 'Mexico', 'Czech Republic', 'Eastern Mediterranean', 'Swaziland', 'Iran', 'Macedonia', 'India', 'Germany', 'France', 'Azerbaijan', 'Great Britain', 'Lebanon', 'England', 'Chile', 'Belarus', 'Spain', 'Pakistan', 'Denmark', 'Austria', 'Wales', 'Bangladesh', 'Armenia', 'Brazil', 'Sweden']\n",
       "\n"
      ]
     }
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -687,16 +687,16 @@
        "      <th>Fat_4-19%</th>\n",
        "      <th>Fat_20-39%</th>\n",
        "      <th>...</th>\n",
-       "      <th>Country of origin_Ireland</th>\n",
-       "      <th>Country of origin_Syria</th>\n",
-       "      <th>Country of origin_Eastern Mediterranean</th>\n",
+       "      <th>Country of origin_Belarus</th>\n",
+       "      <th>Country of origin_Spain</th>\n",
        "      <th>Country of origin_Pakistan</th>\n",
-       "      <th>Country of origin_Andorra</th>\n",
-       "      <th>Country of origin_Slovakia</th>\n",
+       "      <th>Country of origin_Denmark</th>\n",
        "      <th>Country of origin_Austria</th>\n",
-       "      <th>Country of origin_Albania</th>\n",
-       "      <th>Country of origin_Turkey</th>\n",
-       "      <th>Country of origin_Lithuania</th>\n",
+       "      <th>Country of origin_Wales</th>\n",
+       "      <th>Country of origin_Bangladesh</th>\n",
+       "      <th>Country of origin_Armenia</th>\n",
+       "      <th>Country of origin_Brazil</th>\n",
+       "      <th>Country of origin_Sweden</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -854,45 +854,45 @@
        "3                    0            0          0           0  ...   \n",
        "4                    0            0          0           0  ...   \n",
        "\n",
-       "   Country of origin_Ireland  Country of origin_Syria  \\\n",
+       "   Country of origin_Belarus  Country of origin_Spain  \\\n",
        "0                          0                        0   \n",
        "1                          0                        0   \n",
        "2                          0                        0   \n",
        "3                          0                        0   \n",
        "4                          0                        0   \n",
        "\n",
-       "   Country of origin_Eastern Mediterranean  Country of origin_Pakistan  \\\n",
-       "0                                        0                           0   \n",
-       "1                                        0                           0   \n",
-       "2                                        0                           0   \n",
-       "3                                        0                           0   \n",
-       "4                                        0                           0   \n",
+       "   Country of origin_Pakistan  Country of origin_Denmark  \\\n",
+       "0                           0                          0   \n",
+       "1                           0                          0   \n",
+       "2                           0                          0   \n",
+       "3                           0                          0   \n",
+       "4                           0                          0   \n",
        "\n",
-       "   Country of origin_Andorra  Country of origin_Slovakia  \\\n",
-       "0                          0                           0   \n",
-       "1                          0                           0   \n",
-       "2                          0                           0   \n",
-       "3                          0                           0   \n",
-       "4                          0                           0   \n",
+       "   Country of origin_Austria  Country of origin_Wales  \\\n",
+       "0                          0                        0   \n",
+       "1                          0                        0   \n",
+       "2                          0                        0   \n",
+       "3                          0                        0   \n",
+       "4                          0                        0   \n",
        "\n",
-       "   Country of origin_Austria  Country of origin_Albania  \\\n",
-       "0                          0                          0   \n",
-       "1                          0                          0   \n",
-       "2                          0                          0   \n",
-       "3                          0                          0   \n",
-       "4                          0                          0   \n",
+       "   Country of origin_Bangladesh  Country of origin_Armenia  \\\n",
+       "0                             0                          0   \n",
+       "1                             0                          0   \n",
+       "2                             0                          0   \n",
+       "3                             0                          0   \n",
+       "4                             0                          0   \n",
        "\n",
-       "   Country of origin_Turkey  Country of origin_Lithuania  \n",
-       "0                         0                            0  \n",
-       "1                         0                            0  \n",
-       "2                         0                            0  \n",
-       "3                         0                            0  \n",
-       "4                         0                            0  \n",
+       "   Country of origin_Brazil  Country of origin_Sweden  \n",
+       "0                         0                         0  \n",
+       "1                         0                         0  \n",
+       "2                         0                         0  \n",
+       "3                         0                         0  \n",
+       "4                         0                         0  \n",
        "\n",
        "[5 rows x 266 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
